<resources>
    <string name="app_name">Game364</string>
    <string name="hi_welcome_to_game">Hi ! Welcome to Game</string>
    <string name="scissor">Scissor</string>
    <string name="paper">Paper</string>
    <string name="rock">Rock</string>
    <string name="matchDraw">MATCH DRAW</string>
    <string name="youLose">YOU LOSE</string>
    <string name="youWon">YOU WON</string>
    <string name="rock_paper_scissor">Rock-Paper-Scissor</string>
    <string name="player">PLAYER</string>
    <string name="robot">ROBOT</string>
    <string name="you">YOU</string>
    <string name="comp">COMP</string>
    <string name="you">YOU</string>
    <string name="comp">COMP</string>
</resources>